<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ScrollViewStyle">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        style="@style/MatchWrapStyle"
        tools:context="com.example.android.scorekeeper.MainActivity">

        <LinearLayout style="@style/MatchMatchStyle">

            <LinearLayout
                android:id="@+id/team_a"
                style="@style/TeamLayoutStyle">

                <RelativeLayout style="@style/LayoutStyle">

                    <Spinner
                        android:id="@+id/spinner1"
                        style="@style/TeamStyle"
                        android:entries="@array/team_array"/>

                    <ImageView
                        android:id="@+id/logo_a"
                        style="@style/LogoStyle"
                        android:layout_below="@id/spinner1"
                        android:contentDescription="@string/app_name" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/ScoreStyle"
                    android:text="@string/counting" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addOneForTeamA"
                    android:text="@string/score" />

                <LinearLayout style="@style/LayoutStyle">

                    <Button
                        style="@style/LeftButtonsStyle"
                        android:onClick="addOffsideForTeamA"
                        android:text="@string/offsides" />

                    <TextView
                        android:id="@+id/team_a_offsides"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <Button
                        style="@style/LeftButtonsStyle"
                        android:onClick="addCornerForTeamA"
                        android:text="@string/corners" />

                    <TextView
                        android:id="@+id/team_a_corners"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <Button
                        style="@style/LeftButtonsStyle"
                        android:onClick="addFoulForTeamA"
                        android:text="@string/fouls" />

                    <TextView
                        android:id="@+id/team_a_fouls"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/ViewStyle" />

            <LinearLayout
                android:id="@+id/team_b"
                style="@style/TeamLayoutStyle">

                <RelativeLayout style="@style/LayoutStyle">


                    <Spinner
                        android:id="@+id/spinner2"
                        style="@style/TeamStyle"
                        android:entries="@array/team_array"/>

                    <ImageView
                        android:id="@+id/logo_b"
                        style="@style/LogoStyle"
                        android:layout_below="@id/spinner2"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/footballball" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/ScoreStyle"
                    android:text="@string/counting" />

                <Button
                    style="@style/ScoreButtonStyle"
                    android:onClick="addOneForTeamB"
                    android:text="@string/score" />

                <LinearLayout style="@style/LayoutStyle">

                    <TextView
                        android:id="@+id/team_b_offsides"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />

                    <Button
                        style="@style/RightButtonsStyle"
                        android:onClick="addOffsideForTeamB"
                        android:text="@string/offsides" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <TextView
                        android:id="@+id/team_b_corners"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />

                    <Button
                        style="@style/RightButtonsStyle"
                        android:onClick="addCornerForTeamB"
                        android:text="@string/corners" />
                </LinearLayout>

                <LinearLayout style="@style/LayoutStyle">

                    <TextView
                        android:id="@+id/team_b_fouls"
                        style="@style/NumberStyle"
                        android:text="@string/counting" />

                    <Button
                        style="@style/RightButtonsStyle"
                        android:onClick="addFoulForTeamB"
                        android:text="@string/fouls" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/ResetButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetAll"
            android:text="@string/reset" />
    </RelativeLayout>
</ScrollView>